fix-project name vertical alignment in the header and remove test form

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -77,3 +77,7 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.projectName {
+    padding-top: 3px;
+}
